persistent close stream subscription